# Akademik

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: core-api.yml  service-api.yml  web.yml
apps/core-api/: Dockerfile
apps/core-api/src/: Akademik.sln
apps/core-api/src/Akademik/: Akademik.csproj  Program.cs  appsettings.json
apps/core-api/src/Akademik.DataProvider/: Akademik.DataProvider.csproj  AkademikDbContext.cs  DbInitializer.cs
apps/core-api/src/Akademik.DataProvider/Configurations/: AssignmentConfiguration.cs  RefreshTokenConfiguration.cs  RoomConfiguration.cs  UserConfiguration.cs
apps/core-api/src/Akademik.DataProvider/Migrations/: 20260408122054_Initial.cs  20260507135604_AddRefreshTokens.cs  AkademikDbContextModelSnapshot.cs
apps/core-api/src/Akademik.IntegrationTests/: Akademik.IntegrationTests.csproj  AkademikApplicationFactory.cs  AssignmentTests.cs  AuthTests.cs  RoomTests.cs
apps/core-api/src/Akademik.Services/: Akademik.Services.csproj
apps/core-api/src/Akademik/Models/: UserModel.cs  (+12 more)
apps/service-api/: Dockerfile  alembic.ini  pyproject.toml
apps/service-api/alembic/: env.py
apps/service-api/alembic/versions/: 4be055d37b5d_create_python_tables.py
apps/service-api/src/: main.py
apps/service-api/src/application/exceptions/: exceptions.py
apps/service-api/src/application/ports/: notification_port.py
apps/service-api/src/application/services/: complaint_service.py  db_notification_service.py  event_service.py  issue_service.py  notification_read_service.py  notification_service.py  qr_service.py  rabbitmq_notification_service.py
apps/service-api/src/application/tasks/: deliver_notification_task.py  notification_retry_task.py  payment_deadline_task.py
apps/service-api/src/domain/entities/: complaint.py  event.py  issue.py  notification.py  qr.py
apps/service-api/src/domain/enums/: __init__.py  enums.py
apps/service-api/src/infrastructure/: config.py
apps/service-api/src/infrastructure/auth/: jwt_validator.py
apps/service-api/src/infrastructure/celery/: celery_app.py
apps/service-api/src/infrastructure/database/: connection.py
apps/service-api/src/infrastructure/database/models/: __init__.py  complaint.py  event.py  issue.py  notification.py  qr.py
apps/service-api/src/infrastructure/utils/: datetime_utils.py
apps/service-api/src/presentation/: dependencies.py
apps/service-api/src/presentation/api/: health_router.py
apps/service-api/src/presentation/api/v1/: complaints_router.py  events_router.py  issues_router.py  me_router.py  notifications_router.py  qr_router.py
apps/service-api/tests/: conftest.py  test_complaints.py  test_issues.py  test_qr.py  test_tasks.py
apps/web/: components.json  package-lock.json  package.json
apps/web/src/: middleware.ts  proxy.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/services/: assignment-service.ts  issues-service.ts  room-service.ts  user-service.ts
nginx/: nginx.conf
(+81 files in other folders)
